[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctx_stack"
version = "0.1.0"
description = "A lightweight, structured logging context manager for Python applications"
readme = "README.md"
authors = [{name = "Stephan", email = "stephan.poetschner@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/stephanpoetschner/ctx_stack"
"Bug Tracker" = "https://github.com/stephanpoetschner/ctx_stack/issues"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}